plugins {
    id 'checkstyle'
    id 'java'
    id 'idea'
    id 'io.qameta.allure' version '2.11.2'
}

base {
    archivesName = 'autotests'
}

compileJava.options.fork = true

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

idea {
    module {
        outputDir = layout.buildDirectory.dir("classes/java/main").get().asFile
        testOutputDir = layout.buildDirectory.dir("classes/java/test").get().asFile
    }
}

def allureVersion = "2.19.0"

allure {
    autoconfigure = true
    aspectjweaver = true
    version = allureVersion

    useTestNG {
        version = allureVersion
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation(
            [group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '6.1.0'],
            [group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.24.3'],
            [group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.25.3'],
            [group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.8.0'],
            [group: 'org.testng', name: 'testng', version: '7.7.0'],
            [group: 'io.qameta.allure', name: 'allure-testng', version: allureVersion]
    )
    implementation 'org.jetbrains:annotations:24.0.1'
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.16'
}

//=================================== Test =====================================

def dotEnv = [:]
def dotEnvFile = file('.env')
if (dotEnvFile.exists()) {
    dotEnvFile.readLines().each { line ->
        if (line && !line.startsWith('#') && line.contains('=')) {
            def (key, value) = line.split('=', 2)
            dotEnv[key.trim()] = value.trim()
        }
    }
}

def resolveSystemProperty = { String key, defaultValue, List<String> aliases = [] ->
    def value = System.getProperty(key)
    if (value == null) {
        for (String alias : aliases) {
            value = System.getProperty(alias)
            if (value != null) {
                break
            }
        }
    }
    value != null ? value : defaultValue
}

def forwardSystemProperty = { Test task, String key, defaultValue, List<String> aliases = [] ->
    def value = resolveSystemProperty(key, defaultValue, aliases)
    task.systemProperty(key, value)
    aliases.each { alias -> task.systemProperty(alias, value) }
    value
}

def reportUri = { String relativePath ->
    def absolutePath = layout.buildDirectory.file(relativePath).get().asFile.absolutePath.replace('\\', '/')
    "file:///${absolutePath}"
}

def printReportLocations = {
    println ""
    println "TestNG emailable report: ${reportUri('reports/tests/testng/emailable-report.html')}"
    println "TestNG report: ${reportUri('reports/tests/testng/index.html')}"
    println "TestNG artifacts report: ${reportUri('reports/tests/testng/custom-artifacts.html')}"
    println "Allure report: ${reportUri('reports/allure-report/allureReport/index.html')}"
    println "If Allure opens blank from file:///, run: ./gradlew allureServe"
}

test {
    finalizedBy('allureReport')
    ignoreFailures = false
    doFirst {
        delete(layout.buildDirectory.dir("allure-results").get().asFile)
        delete(layout.buildDirectory.dir("reports/tests/testng").get().asFile)
    }
    testLogging {
        showStandardStreams = true
        events "PASSED", "FAILED", "SKIPPED"
        exceptionFormat = 'full'
    }
    systemProperty 'org.slf4j.simpleLogger.logFile', 'System.out'
    systemProperty 'org.slf4j.simpleLogger.defaultLogLevel', 'info'
    systemProperty 'org.slf4j.simpleLogger.showDateTime', 'true'
    systemProperty 'org.slf4j.simpleLogger.dateTimeFormat', 'yyyy-MM-dd HH:mm:ss.SSS'
    systemProperty 'org.slf4j.simpleLogger.showThreadName', 'true'
    systemProperty 'org.slf4j.simpleLogger.showLogName', 'false'
    systemProperty 'testng.show.stack.frames', 'true'

    dotEnv.each { key, value -> environment key, value }

    forwardSystemProperty(delegate, 'base_url', '')
    forwardSystemProperty(delegate, 'browser_version', 'latest')
    forwardSystemProperty(delegate, 'build_number', new Date().format('MMddyyhhmmss'))
    forwardSystemProperty(delegate, 'driver', 'CHROME')
    forwardSystemProperty(delegate, 'remote_key', '', ['lambda_key'])
    forwardSystemProperty(delegate, 'remote_username', '', ['lambda_username'])
    forwardSystemProperty(delegate, 'locale', 'en-US')
    forwardSystemProperty(delegate, 'os', 'windows')
    forwardSystemProperty(delegate, 'platform', 'Windows 10')
    forwardSystemProperty(delegate, 'remote_browser', 'CHROME')
    forwardSystemProperty(delegate, 'screen_maximize', true)
    forwardSystemProperty(delegate, 'screen_resolution', '1920,1080')
    def suite = forwardSystemProperty(delegate, 'suite', 'ui,unit')

    def suiteGroups = suite.split(',')*.trim().findAll { it }

    // TestNG settings
    def exclude = resolveSystemProperty('exclude', 'disabled')
    def resolvedThreadCount = resolveSystemProperty('thread_count', 4)

    useTestNG() {
        useDefaultListeners = true
        listeners << 'utils.logging.CustomArtifactsReporter'
        outputDirectory = layout.buildDirectory.dir("reports/tests/testng").get().asFile
        includeGroups suiteGroups as String[]
        excludeGroups exclude
        parallel 'methods'
        threadCount = resolvedThreadCount as int
    }

    afterSuite { suiteDescription, suiteResult ->
        if (suiteDescription.parent == null) {
            if (suiteResult.testCount == 0) {
                throw new GradleException("No tests were executed for suite '${suite}'. Check suite filtering.")
            }

            int failed = suiteResult.failedTestCount + suiteResult.skippedTestCount
            if (failed > 0) {
                throw new GradleException("Tests did not pass: failed=${suiteResult.failedTestCount}, skipped=${suiteResult.skippedTestCount}, total=${suiteResult.testCount}")
            }
        }
    }
}

tasks.named('allureReport') {
    doFirst {
        delete(layout.buildDirectory.dir("reports/allure-report/allureReport").get().asFile)
    }
    doLast {
        printReportLocations()
    }
}
